--- a/xit/malt/create/init.mustache
+++ b/xit/malt/create/init.mustache
@@ -1,5 +1,7 @@
+<h3 can-click="malt.toggle"><img src="/general/css/icons/malt.png" alt="malt"></h3>
+{{#if malt.visible}}
 <div class="row">
-<div class="container">
+<div class="container inner">
     <div class="row">
         <div class="col-md-1"><label>Name:</label></div>
         <div class="col-md-1"><label>Type:</label></div>
@@ -39,3 +41,4 @@
     </div>
 </div>
 </div>
+{{/if}}
