--- a/xit/water/init.mustache
+++ b/xit/water/init.mustache
@@ -1,7 +1,7 @@
-<button can-click="water.toggle">Water</button>
+<h3 can-click="water.toggle"><img src="/general/css/icons/water.png" alt="water"></h3>
 {{#if water.visible}}
 <div class="row">
-    <div class="container">
+    <div class="container inner">
         <div class="row">
             <div class="col-md-6">
                 <label for='potSize'>Pot Size</label>
