--- a/xit/water/water.less
+++ b/xit/water/water.less
@@ -1,5 +1,5 @@
-.container {
-  width: 800px;
-  border: orange 2px solid;
-  border-radius: 8px;
+img {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
 }
