got everything to a nice state

--- a/css/main.less
+++ b/css/main.less
@@ -1,5 +1,15 @@
 h3 {
   margin-bottom: 0px;
-  border: 2px orange solid;
+//  border: 2px orange solid;
+  border-radius: 8px;
+}
+.inner {
+  width: 765px;
+//  border: orange 2px solid;
+//  border-radius: 8px;
+}
+.outer {
+  width: 800px;
+  border: steelblue 2px solid;
   border-radius: 8px;
 }
